--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,9 @@ on:
   - push
   - pull_request
 
+env:
+  DOTNET_CLI_TELEMETRY_OPTOUT: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,6 +21,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
       
+    - uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '5.0.100-preview.4.20258.7'
+
     - name: Build
       run: |
         dotnet build --configuration Release
