--- a/test/Nito.DependencyInjection.InstanceBuilder.Tests/Nito.DependencyInjection.Tests.csproj
+++ b/test/Nito.DependencyInjection.InstanceBuilder.Tests/Nito.DependencyInjection.Tests.csproj
@@ -1,10 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp5.0;netcoreapp3.1;netcoreapp2.1;net461</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;netcoreapp2.1;net461</TargetFrameworks>
     <LangVersion>latest</LangVersion>
 
     <IsPackable>false</IsPackable>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(CI)'!='true'">
+    <TargetFrameworks>$(TargetFrameworks);netcoreapp5.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp5.0'">
