dump context using PS syntax

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       env:
         CONTEXT: ${{ toJson(github) }}
       run: |
-        echo "Context: $CONTEXT"
+        echo "Context: $Env:CONTEXT"
 
     - name: Checkout
       uses: actions/checkout@v2
