--- a/src/Nito.DependencyInjection.InstanceBuilder.Core/Nito.DependencyInjection.InstanceBuilder.Core.csproj
+++ b/src/Nito.DependencyInjection.InstanceBuilder.Core/Nito.DependencyInjection.InstanceBuilder.Core.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\icon.png" Pack="true" PackagePath="\"/>
+  </ItemGroup>
+
 </Project>
