--- a/src/Nito.DependencyInjection.InstanceBuilder.Options/Nito.DependencyInjection.InstanceBuilder.Options.csproj
+++ b/src/Nito.DependencyInjection.InstanceBuilder.Options/Nito.DependencyInjection.InstanceBuilder.Options.csproj
@@ -1,7 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+    <Description>Adds named option support to InstanceBuilder</Description>
+    <PackageTags>$(PackageTags);options</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,6 +12,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Nito.DependencyInjection.InstanceBuilder.Core\Nito.DependencyInjection.InstanceBuilder.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\icon.png" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
