--- a/src/Nito.DependencyInjection.InstanceBuilder/Nito.DependencyInjection.InstanceBuilder.csproj
+++ b/src/Nito.DependencyInjection.InstanceBuilder/Nito.DependencyInjection.InstanceBuilder.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
@@ -11,4 +11,7 @@
     <ProjectReference Include="..\Nito.DependencyInjection.InstanceBuilder.Options\Nito.DependencyInjection.InstanceBuilder.Options.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\icon.png" Pack="true" PackagePath="\"/>
+  </ItemGroup>
 </Project>
