--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,8 +5,8 @@ on:
   - pull_request
 
 env:
-  CI: true
-  DOTNET_CLI_TELEMETRY_OPTOUT: true
+  CI: 'true'
+  DOTNET_CLI_TELEMETRY_OPTOUT: 'true'
 
 jobs:
   build:
