--- a/src/Nito.DependencyInjection.InstanceBuilder/Nito.DependencyInjection.InstanceBuilder.csproj
+++ b/src/Nito.DependencyInjection.InstanceBuilder/Nito.DependencyInjection.InstanceBuilder.csproj
@@ -2,9 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
-    <IncludeBuildOutput>false</IncludeBuildOutput>
-    <NoWarn>NU5128</NoWarn>
-    <IncludeSymbols>false</IncludeSymbols>
+    <IsMetapackage>true</IsMetapackage>
   </PropertyGroup>
 
   <ItemGroup>
