always take version from Directory.Build.props

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,6 +50,5 @@ jobs:
           **/*.snupkg
 
     - name: Publish
-      if: startsWith(github.event.ref, 'refs/tags/v')
       run: |
-        dotnet nuget push **/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }}
+        dotnet nuget push **/*.nupkg --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }}
