--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -25,6 +25,14 @@
     </PackageReference>
   </ItemGroup>
 
+  <!-- Linux builds targeting full framework -->
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
   <!-- Package settings -->
   <PropertyGroup>
     <PackageProjectUrl>https://github.com/$(GITHUB_REPOSITORY)</PackageProjectUrl>
