--- a/src/Nito.DependencyInjection.InstanceBuilder.Core/Nito.DependencyInjection.InstanceBuilder.Core.csproj
+++ b/src/Nito.DependencyInjection.InstanceBuilder.Core/Nito.DependencyInjection.InstanceBuilder.Core.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 
 </Project>
