--- a/src/Nito.DependencyInjection.InstanceBuilder.Options/Nito.DependencyInjection.InstanceBuilder.Options.csproj
+++ b/src/Nito.DependencyInjection.InstanceBuilder.Options/Nito.DependencyInjection.InstanceBuilder.Options.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.1.1" />
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 
   <ItemGroup>
