--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,11 @@ jobs:
 
     - name: Checkout
       uses: actions/checkout@v2
-      
+
+    - uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '5.0.100-preview.4.20258.7'
+
     - name: Cache nuget
       uses: actions/cache@v1
       with:
