--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
 
     - uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '5.0.100-preview.4.20258.7'
+        dotnet-version: '3.1.300'
 
     - name: Cache nuget
       uses: actions/cache@v1
