--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,12 +34,12 @@ jobs:
 
     - uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '5.0.0-preview.4'
+        dotnet-version: '5.0.0-preview.4.*'
 
     # https://github.com/actions/setup-dotnet/issues/25
     - name: .net SxS
       run: |
-        rsync -a ${DOTNET_ROOT/3.1.300/5.0.0-preview.4}/* $DOTNET_ROOT/
+        rsync -a ${DOTNET_ROOT/3.1.300/5.0.0-preview.4.*}/* $DOTNET_ROOT/
 
     - name: Cache nuget
       uses: actions/cache@v1
