--- a/test/Nito.DependencyInjection.InstanceBuilder.Tests/Nito.DependencyInjection.Tests.csproj
+++ b/test/Nito.DependencyInjection.InstanceBuilder.Tests/Nito.DependencyInjection.Tests.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;netcoreapp2.1;net461</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;netcoreapp2.1</TargetFrameworks>
     <LangVersion>latest</LangVersion>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(CI)'!='true'">
-    <TargetFrameworks>$(TargetFrameworks);netcoreapp5.0</TargetFrameworks>
+    <TargetFrameworks>$(TargetFrameworks);netcoreapp5.0;net461</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp5.0'">
@@ -40,7 +40,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 
   <ItemGroup>
