--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,9 @@ jobs:
           **/*.nupkg
           **/*.snupkg
 
+    - name: Upload code coverage
+      uses: codecov/codecov-action@v1
+
     - name: Publish
       run: |
         dotnet nuget push **/*.nupkg --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }}
