upload test results as artifacts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,13 +41,20 @@ jobs:
         dotnet test --configuration Release --no-build --collect:"XPlat Code Coverage"
         dotnet pack --configuration Release --no-build
 
-    - name: Upload artifacts
+    - name: Upload nuget artifacts
       uses: actions/upload-artifact@v2
       with:
         name: nuget-packages
         path: |
           **/*.nupkg
           **/*.snupkg
+
+    - name: Upload test result artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: test-results
+        path: |
+          **/TestResults/**/*
 
     - name: Upload code coverage
       uses: codecov/codecov-action@v1
