--- a/src/project.props
+++ b/src/project.props
@@ -1,6 +1,6 @@
 <Project>
   <PropertyGroup>
-    <VersionPrefix>1.0.0-pre04</VersionPrefix>
+    <VersionPrefix>1.0.0</VersionPrefix>
     <RootNamespace>Nito.DependencyInjection</RootNamespace>
     <Description>Helper types for advanced .NET Core Dependency Injection</Description>
     <PackageTags>dependency-injection</PackageTags>
